Prevent poster from jumping to off-screen

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
 .poster {
   	float: right;
   	height: 100vh;
+	max-width: 40%;
 }
 
 .cont {
